# lattice

./: .gitignore  README.md  pyproject.toml
examples/: diagrams.py  simple_diagram.ipynb
lattice/: diagram.py  example_systems.py  node.py  reservoir.py  system.py
tests/: test_diagram  test_diagram.py  test_node.py  test_system.py
