[tool.poetry]
name = "lattice"
version = "0.0.0"
description = "Library to describe and simulate water resoure systems."
authors = ["John Kucharski <johnkucharski@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
